2015-07-21 belangeo <belangeo@gmail.com>

    * Fixed Centroid output with silence as input.
    - rev 1330

2015-07-21 belangeo <belangeo@gmail.com>

    * Added new objet: RawMidi, a raw Midi handler.
    - rev 1329

2015-07-21 belangeo <belangeo@gmail.com>

    * Added pyoArgsAssert call in each object's methods.
    - rev 1320, 1325, 1327, 1328

2015-07-20 belangeo <belangeo@gmail.com>

    * Fixed the "segmentation fault" that occur sometimes when deleting an object.
    - rev 1326
    
2015-05-31 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed project tree.
    - rev 1315

2015-05-29 belangeo <belangeo@gmail.com>

    * E-Pyo: stderr now prints to the output panel.
    - rev 1314
 
2015-05-25 belangeo <belangeo@gmail.com>

    * E-Pyo: Added code block selection (#--> and #<-- are delimiters). 
    The background server now prints to the output panel.
    - rev 1313

2015-04-29 belangeo <belangeo@gmail.com>

    * Fixed CPU usage of PeakAmp.
    - rev 1312

-------------------------------------------------------------------------------------
2015-03-05 belangeo <belangeo@gmail.com>

    * Fixed crash when portaudio stream is stopped on OSX (created when fixed
	for Windows). Rev 1310 is the sources for 0.7.5 release.
    - rev 1310

2015-03-05 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.5.
    - rev 1308

2015-03-05 belangeo <belangeo@gmail.com>

    * Added documentation for server methods setTimeCallable and setMeterCallable.
    - rev 1304

2015-03-05 belangeo <belangeo@gmail.com>

    * Changed license to the more permissive LGPL version 3.
    - rev 1303

2015-03-03 belangeo <belangeo@gmail.com>

    * The Server can be booted with a different number of input and output channels.
    - rev 1301

2015-03-03 belangeo <belangeo@gmail.com>

    * Wraped input of Record in an InputFader object.
    - rev 1300

2015-03-03 belangeo <belangeo@gmail.com>

    * Fixed bug in Hilbert object.
    - rev 1299

2015-02-18 belangeo <belangeo@gmail.com>
